# do

./: README.md  main.py  pyproject.toml
organizer/: config.py  file_organizer.py
test/: test_organizer.py
